syntax = "proto3";
package user;

service User {
    rpc GetYourself(GetYourselfRequest) returns (GetYourselfResponse);
    rpc DeleteYourself(DeleteYourselfRequest) returns (DeleteYourselfResponse);
}

message GetYourselfRequest {}
message GetYourselfResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}

message DeleteYourselfRequest {}
message DeleteYourselfResponse {}

